--- a/templates/moker/send.html
+++ b/templates/moker/send.html
@@ -10,7 +10,7 @@
             <ul class="nav nav-list">
                 <li class="nav-header">请求类型</li>
                 {% for item in moker_request_list %}
-                <li><a href="/send?moker_request_id={{item.id}}">{{item.name}}</a></li>
+                <li><a href="/moker_send?moker_request_id={{item.id}}">{{item.name}}</a></li>
                 {% endfor %}
             </ul>
         </div>
@@ -40,7 +40,7 @@
 {% block extra-script %}
 <script>
 $.ajaxSetup({
-        type : "POST", url : "/moker_j", cache : false, dataType : "json"
+        type : "POST", url : "/moker_j/", cache : false, dataType : "json"
 });
 function send_request(){
     var moker_request_id = $('.moker-request-id').attr('data-moker-request-id');
